# macchina.io

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-SDK  Makefile  README.md  SDK.make  components.make  env.bash  env.zsh
platform/CodeGeneration/: CMakeLists.txt  CodeGeneration.progen  CodeGeneration_CE_vs90.sln  CodeGeneration_CE_vs90.vcproj  CodeGeneration_WEC2013_vs120.sln  CodeGeneration_WEC2013_vs120.vcxproj  CodeGeneration_WEC2013_vs120.vcxproj.filters  CodeGeneration_vs100.sln  CodeGeneration_vs100.vcxproj  CodeGeneration_vs100.vcxproj.filters  CodeGeneration_vs110.sln  CodeGeneration_vs110.vcxproj  CodeGeneration_vs110.vcxproj.filters  CodeGeneration_vs120.sln  CodeGeneration_vs120.vcxproj  CodeGeneration_vs120.vcxproj.filters  CodeGeneration_vs140.sln  CodeGeneration_vs140.vcxproj  CodeGeneration_vs140.vcxproj.filters  CodeGeneration_vs71.sln  CodeGeneration_vs71.vcproj  CodeGeneration_vs80.sln  CodeGeneration_vs80.vcproj  CodeGeneration_vs90.sln  CodeGeneration_vs90.vcproj  CodeGeneration_x64_vs100.sln  CodeGeneration_x64_vs100.vcxproj  CodeGeneration_x64_vs100.vcxproj.filters  CodeGeneration_x64_vs110.sln  CodeGeneration_x64_vs110.vcxproj  CodeGeneration_x64_vs110.vcxproj.filters  CodeGeneration_x64_vs120.sln  CodeGeneration_x64_vs120.vcxproj  CodeGeneration_x64_vs120.vcxproj.filters  CodeGeneration_x64_vs140.sln  CodeGeneration_x64_vs140.vcxproj  CodeGeneration_x64_vs140.vcxproj.filters  CodeGeneration_x64_vs90.sln  CodeGeneration_x64_vs90.vcproj  Makefile
platform/CodeGeneration/cmake/: PocoCodeGenerationConfig.cmake
platform/CodeGeneration/src/: CodeGenerator.cpp  CppGenerator.cpp  GeneratorEngine.cpp  MethodPropertyFilter.cpp  Utility.cpp
platform/CodeGeneration/testsuite/: CMakeLists.txt  Makefile  TestSuite.progen  TestSuite_CE_vs90.vcproj  TestSuite_WEC2013_vs120.vcxproj  TestSuite_WEC2013_vs120.vcxproj.filters  TestSuite_vs100.vcxproj  TestSuite_vs100.vcxproj.filters  TestSuite_vs110.vcxproj  TestSuite_vs110.vcxproj.filters  TestSuite_vs120.vcxproj  TestSuite_vs120.vcxproj.filters  TestSuite_vs140.vcxproj  TestSuite_vs140.vcxproj.filters  TestSuite_vs71.vcproj  TestSuite_vs80.vcproj  TestSuite_vs90.vcproj  TestSuite_x64_vs100.vcxproj  TestSuite_x64_vs100.vcxproj.filters  TestSuite_x64_vs110.vcxproj  TestSuite_x64_vs110.vcxproj.filters  TestSuite_x64_vs120.vcxproj  TestSuite_x64_vs120.vcxproj.filters  TestSuite_x64_vs140.vcxproj  TestSuite_x64_vs140.vcxproj.filters  TestSuite_x64_vs90.vcproj
platform/Geo/: CMakeLists.txt  Makefile
platform/Geo/cmake/: PocoGeoConfig.cmake
platform/Geo/src/: Angle.cpp  LatLon.cpp
platform/Geo/testsuite/: Makefile
platform/OSP/: CMakeLists.txt  Makefile  OSP.progen  OSP_CE_vs90.sln  OSP_CE_vs90.vcproj  OSP_WEC2013_vs120.sln  OSP_WEC2013_vs120.vcxproj  OSP_WEC2013_vs120.vcxproj.filters  OSP_vs100.sln  OSP_vs100.vcxproj  OSP_vs100.vcxproj.filters  OSP_vs110.sln  OSP_vs110.vcxproj  OSP_vs110.vcxproj.filters  OSP_vs120.sln  OSP_vs120.vcxproj  OSP_vs120.vcxproj.filters  OSP_vs140.sln  OSP_vs140.vcxproj  OSP_vs140.vcxproj.filters  OSP_vs71.sln  OSP_vs71.vcproj  OSP_vs80.sln  OSP_vs80.vcproj  OSP_vs90.sln  OSP_vs90.vcproj  OSP_x64_vs100.sln  OSP_x64_vs100.vcxproj  OSP_x64_vs100.vcxproj.filters  OSP_x64_vs110.sln  OSP_x64_vs110.vcxproj  OSP_x64_vs110.vcxproj.filters  OSP_x64_vs120.sln  OSP_x64_vs120.vcxproj  OSP_x64_vs120.vcxproj.filters  OSP_x64_vs140.sln  OSP_x64_vs140.vcxproj  OSP_x64_vs140.vcxproj.filters  OSP_x64_vs90.sln  OSP_x64_vs90.vcproj  (+1 more)
platform/OSP/ActiveRecord/: ActiveRecord.bndlspec  CMakeLists.txt  Makefile  dependencies
platform/OSP/BundleAdmin/: BundleAdmin.bndlspec  BundleAdmin.progen  BundleAdmin_CE_vs90.sln  BundleAdmin_CE_vs90.vcproj  BundleAdmin_WEC2013_vs120.sln  CMakeLists.txt  (+35 more)
platform/RemotingNG/: CMakeLists.txt  Makefile  RemotingNG.progen  RemotingNG_CE_vs90.sln  RemotingNG_CE_vs90.vcproj  RemotingNG_WEC2013_vs120.sln  RemotingNG_WEC2013_vs120.vcxproj  RemotingNG_WEC2013_vs120.vcxproj.filters  RemotingNG_vs100.sln  RemotingNG_vs100.vcxproj  RemotingNG_vs100.vcxproj.filters  RemotingNG_vs110.sln  RemotingNG_vs110.vcxproj  RemotingNG_vs110.vcxproj.filters  RemotingNG_vs120.sln  RemotingNG_vs120.vcxproj  RemotingNG_vs120.vcxproj.filters  RemotingNG_vs140.sln  RemotingNG_vs140.vcxproj  RemotingNG_vs140.vcxproj.filters  RemotingNG_vs71.sln  RemotingNG_vs71.vcproj  RemotingNG_vs80.sln  RemotingNG_vs80.vcproj  RemotingNG_vs90.sln  RemotingNG_vs90.vcproj  RemotingNG_x64_vs100.sln  RemotingNG_x64_vs100.vcxproj  RemotingNG_x64_vs100.vcxproj.filters  RemotingNG_x64_vs110.sln  RemotingNG_x64_vs110.vcxproj  RemotingNG_x64_vs110.vcxproj.filters  RemotingNG_x64_vs120.sln  RemotingNG_x64_vs120.vcxproj  RemotingNG_x64_vs120.vcxproj.filters  RemotingNG_x64_vs140.sln  RemotingNG_x64_vs140.vcxproj  RemotingNG_x64_vs140.vcxproj.filters  RemotingNG_x64_vs90.sln  RemotingNG_x64_vs90.vcproj
platform/Serial/: CMakeLists.txt  Makefile
platform/WebTunnel/: CMakeLists.txt  Makefile  WebTunnel.progen  WebTunnel_CE_vs90.sln  WebTunnel_CE_vs90.vcproj  WebTunnel_WEC2013_vs120.sln  WebTunnel_WEC2013_vs120.vcxproj  WebTunnel_WEC2013_vs120.vcxproj.filters  WebTunnel_vs100.sln  WebTunnel_vs100.vcxproj  WebTunnel_vs100.vcxproj.filters  WebTunnel_vs110.sln  WebTunnel_vs110.vcxproj  WebTunnel_vs110.vcxproj.filters  WebTunnel_vs120.sln  WebTunnel_vs120.vcxproj  WebTunnel_vs120.vcxproj.filters  WebTunnel_vs71.sln  WebTunnel_vs71.vcproj  WebTunnel_vs80.sln  WebTunnel_vs80.vcproj  WebTunnel_vs90.sln  WebTunnel_vs90.vcproj  WebTunnel_x64_vs100.sln  WebTunnel_x64_vs100.vcxproj  WebTunnel_x64_vs100.vcxproj.filters  WebTunnel_x64_vs110.sln  WebTunnel_x64_vs110.vcxproj  WebTunnel_x64_vs110.vcxproj.filters  WebTunnel_x64_vs120.sln  WebTunnel_x64_vs120.vcxproj  WebTunnel_x64_vs120.vcxproj.filters  WebTunnel_x64_vs90.sln  WebTunnel_x64_vs90.vcproj
server/: CMakeLists.txt  Makefile  macchina.pem  macchina.properties  macchina.properties.in  macchina.properties.install  macchina.properties.snap  rootcert.pem  sample-track.gpx
server/src/: MacchinaServer.cpp
(+5102 files in other folders)
