add_subdirectory(BundleContainer)
add_subdirectory(BundleServer)
add_subdirectory(EchoCommand)
add_subdirectory(Extensible)
add_subdirectory(Extension)
add_subdirectory(Greeter)
add_subdirectory(GreetingService)
add_subdirectory(LogLevelCommand)
add_subdirectory(Preferences)
add_subdirectory(ServiceListener)
add_subdirectory(SimpleAuthService)
add_subdirectory(WebEcho)
add_subdirectory(WebEvent)
add_subdirectory(WebFilter)
add_subdirectory(WebIndex)
add_subdirectory(WebInfo)
add_subdirectory(WebPage)
add_subdirectory(WebSession)
